[package]
name = "pmanager"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rust-argon2 = "1.0.0"
rand_hc = "0.3.1"
aes-gcm = "0.9.4"
md5 = "0.7.0"
dirs = "4.0.0"
config = "0.13.1"
toml = "0.5.9"
serde = "1.0.142"
serde_json = "1.0.83"
serde_derive = "1.0.142"
byteorder = "1.4.3"
crc = "1.7"
clap = { version = "3.2.20", features = ["derive"] }
rpassword = "7.0.0"
dialoguer = "0.10.2"
sha3 = "0.10.5"
isahc = "1.7.2"

[lib]
name = "libkvdb"
path = "src/lib.rs"
